chore: move dot inside paragraph

--- a/plugin-description.html
+++ b/plugin-description.html
@@ -6,7 +6,7 @@
   The only requisite is to have a <code>.commitlintrc.json</code> file in the project's root
   directory.
 </p>
-<p>The considered rules are <strong>type-enum</strong> and <strong>scope-enum</strong></p>.
+<p>The considered rules are <strong>type-enum</strong> and <strong>scope-enum</strong>.</p>
 <br/>
 <p>
   Read additional details
